--- a/stylesheet.css
+++ b/stylesheet.css
@@ -49,7 +49,7 @@ nav ul li a
 {
 	width:600px;
 	height:200px;
-	background-color:#1d1d1d;
+	background-color:#FFF;
 	color:#FFF;
 	margin:0 auto;
 	text-align:left;
