--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -1,5 +1,5 @@
 .pageContent {
-	background-image: url('http://raulsmail.gitgub.io/img/logoBlock_bg.png');
+	background-image: url('//static.spigotmc.org/styles/spigot/style/logoBlock_bg.png');
 	background-repeat: repeat;
 	background-position: 0 0;
 }
